2000-07-31  Christopher James Lahey  <clahey@helixcode.com>

	* gui/component/addressbook.c: Changed the default set of columns.

2000-07-29  Christopher James Lahey  <clahey@helixcode.com>

	* backend/ebook/Makefile.am: Added load-gnomecard-addressbook
	compilation.

	* backend/ebook/e-card.c, backend/ebook/e-card.h: Added
	e_card_load_cards_from_file helper function to load multiple cards
	from a single file.

	* backend/ebook/load-gnomecard-addressbook.c: New file to load
	vcard files.  I think this is the format that gnomecard uses so if
	you copy your gnomecard file to gnomecard.vcf and then run this
	program in the same directory, it'll copy all your gnome contacts
	into evolution.  It needs to be changed to take a filename as a
	parameter.  Some fields (phone and address information, for
	example) aren't displayed properly, but are saved.  This is new
	code, so some other than phone and address may be lost.

2000-07-28  Ettore Perazzoli  <ettore@helixcode.com>

	* backend/pas/Makefile.am: Add `pas-backend-ldap.c' and
	`pas-backend-ldap.h' to `EXTRA_DIST' so they get distributed even
	if the OpenLDAP support is not enabled.

2000-07-27  Christopher James Lahey  <clahey@helixcode.com>

	* backend/ebook/load-pine-addressbook.c: Changed the URI to load
	to.

2000-07-26  Christopher James Lahey  <clahey@helixcode.com>

	* gui/minicard/e-minicard-widget-test.c: Fixed a warning.

2000-07-26  Chris Toshok  <toshok@helixcode.com>

	* backend/pas/pas-backend-ldap.c (view_destroy): wait to free the
	view until we've taken care of freeing its internals.  also, close
	the ldap connection here.
	(pas_backend_ldap_connect): rename p_b_l_ensure_connected to this,
	since it's always called when we create a view.
	(pas_backend_ldap_build_all_cards_list): open an ldap connection
	in this function and close it at the end.
	(poll_ldap): make sure to call ldap_unbind to close the view's
	connection here.
	(pas_backend_ldap_search): call pas_backend_ldap_connect here -